<package>
  <name>scheduler_request_manager</name>
  <version>0.0.0</version>
  <description>
    Python and C++ interfaces for managing rocon scheduler requests.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <license>BSD</license>  

  <url type="website">http://wiki.ros.org/scheduler_request_manager</url>
  <url type="repository">https://github.com/utexas-bwi/scheduler_request_manager.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/scheduler_request_manager/issues</url>
  <author>Jack O'Quin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>scheduler_msgs</build_depend>
  <build_depend>unique_id</build_depend>
  <build_depend>uuid_msgs</build_depend>

  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>scheduler_msgs</run_depend>
  <run_depend>unique_id</run_depend>
  <run_depend>uuid_msgs</run_depend>

  <test_depend>rosunit</test_depend>

</package>
